# defog-data

./: pyproject.toml  setup.py
defog_data/: supplementary.py
