[tool.poetry]
name = "defog-data"
version = "0.1.0"
description = "Defog data."
authors = ["Anubhav Rana <anubhav.rana@anthem.com>"]
readme = "README.md"

packages = [
    { include = "defog_data", from = "./" },
]

include = [
    { path = "defog_data/academic/academic.json", format = ["sdist", "wheel"] },
    { path = "defog_data/advising/advising.json", format = ["sdist", "wheel"] },
    { path = "defog_data/atis/atis.json", format = ["sdist", "wheel"] },
    { path = "defog_data/broker/broker.json", format = ["sdist", "wheel"] },
    { path = "defog_data/car_dealership/car_dealership.json", format = ["sdist", "wheel"]},
    { path = "defog_data/derm_treatment/derm_treatment.json", format = ["sdist", "wheel"]},
    { path = "defog_data/ewallet/ewallet.json", format = ["sdist", "wheel"]},
    { path = "defog_data/geography/geography.json", format = ["sdist", "wheel"]},
    { path = "defog_data/restaurants/restaurants.json", format = ["sdist", "wheel"]},
    { path = "defog_data/scholar/scholar.json", format = ["sdist", "wheel"]},
    { path = "defog_data/yelp/yelp.json", format = ["sdist", "wheel"]},
]

[tool.poetry.dependencies]
python = "^3.11"
sentence-transformers = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
